# glslScene

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  root-dir-of-glsl-scene.txt
doc/: glsl-sandbox.txt  readme-windows.txt  scene-config.md  scene-overview.md  tml-specification.md
include/: camera.h  context.h
include/capi/ecs/: entity.h  transform_component.h
include/capi/logic/: logic.h
include/capi/rendering/: properties.h
include/capi/system/: log.h
include/common/: cfg.h  color.h  color_ex.h  fs.h  rect.h  rect.inl  rect_fwd.h  sdl_events_trace.h  size2.h  size2.inl  size2_fwd.h  ssize.h  str.h  vector2.h  vector3.h  vertex.h
include/configloader/: context_loader.h  render_pass_loader.h  res_loader.h  scene_loader.h  uniform_attr_loader.h
include/ecs/: child_entities.h  entity.h  logic.h  logic_component.h  mesh_component.h  shader_component.h  texture_component.h  transform_component.h
include/glad/: glad.h
include/gs/: context.h  context_properties.h
include/gs/common/: cfg.h  color_ex.h  lookup8.h  primitive.h  rect.h  size2.h  vector2.h  vector2.inl  vector2_fwd.h  vector3.h  vector3.inl  vector3_fwd.h
include/gs/configloader/: config_loader.h  context_loader.h  render_pass_loader.h  res_loader.h  scene_loader.h  sml_parser.h  uniform_attr_loader.h
include/gs/ecs/: child_entities.h  component.h  entity.h  logic_component.h  mesh_component.h  shader_component.h  texture_component.h  transform_component.h
include/gs/gui/: gui_manager.h
include/gs/logic/: c_wrapper_logic.h  capi_example_logic.h  glsl_sandbox_logic.h  light_matrix_logic.h  rotate_logic.h  script_logic.h
include/gs/rendering/: gl_api.h  matrices.h  properties.h  render_pass.h  render_pass_manager.h  renderer.h  shader_stack.h  texture_unit_stack.h
include/gs/res/: attribute.h  creation.h  framebuffer.h  mesh.h  resource.h  resource_id.h  resource_id_limit.h  resource_manager.h  shader_info.h  shader_program.h  texture.h  uniform.h
include/gs/scene/: glsl_sandbox_logic.h  light_matrix_logic.h  projection.h  rotate_logic.h  scene.h  scene_manager.h  view.h
include/gs/system/: file_change_monitoring.h  log.h
include/imgui/: imgui.h  imgui_impl_opengl3.h
include/rendering/: gl_api.h  gl_version.h  properties.h  render_pass.h  render_pass_manager.h  renderer.h  shader_stack.h  texture_unit_stack.h
include/res/: creation.h  framebuffer.h  mesh.h  resource.h  resource_manager.h  shader_info.h  shader_program.h  texture.h  uniform.h
include/scene/: glsl_sandbox_logic.h  light_matrix_logic.h  projection.h  rotate_logic.h  scene.h  scene_manager.h
include/system/: file_change_monitoring.h
scenes/: selection.tml
scenes/scene_001_a_triangles_no_shader/: scene.tml
scenes/scene_001_b_triangles/: scene.tml
scenes/scene_001_b_triangles/shaders/: triangle.frag  triangle.vert
scenes/scene_001_c_triangles/: scene.tml
scenes/scene_001_c_triangles/shaders/: triangle.vert
scenes/scene_001_d_triangles_mod/: scene.tml
scenes/scene_001_d_triangles_mod/shaders/: triangle.frag
scenes/scene_001_e_triangles_fb_mod/: scene.tml
scenes/scene_001_e_triangles_fb_mod/shaders/: fb.frag  fb.vert  triangle.vert
scenes/scene_001_f_triangles_script/: scene.tml
scenes/scene_001_f_triangles_script/scripts/: test.c
scenes/scene_001_f_triangles_script/shaders/: triangle.frag  triangle.vert
scenes/scene_002_a_3D/: scene.tml
scenes/scene_002_a_3D/shaders/: example.vert
scenes/scene_002_b_3D/: scene.tml
scenes/scene_002_b_3D/shaders/: example.frag  example.vert
scenes/scene_003_a_transform_no_shader/: scene.tml
scenes/scene_003_b_transform/: scene.tml
scenes/scene_003_b_transform/shaders/: example.vert
scenes/scene_003_c_transform/: scene.tml
scenes/scene_003_d_transform_gl33/: scene.tml
scenes/scene_003_e_transform_gl33/: scene.tml
scenes/scene_003_f_geo_gl33/: Readme-and-License-info.txt  scene.tml
scenes/scene_004_a_glsl-sandbox/: scene.tml
scenes/scene_005_a_shadertoy/: scene.tml
scenes/scene_006_a_texture_no_shader/: scene.tml
scenes/scene_006_b_texture_shader/: scene.tml
scenes/scene_006_c_texture_no-matrix/: scene.tml
scenes/scene_006_d_texture_gl33/: scene.tml
scenes/scene_006_e_texture_fb_gl33/: scene.tml
src/: camera.cpp  context.cpp  main.cpp
src/capi/ecs/: entity.cpp  (+1 more)
src/common/: cfg.cpp  color.cpp  fs.cpp  sdl_events_trace.cpp  str.cpp
src/configloader/: context_loader.cpp  render_pass_loader.cpp  res_loader.cpp  scene_loader.cpp  sml_parser.cpp  uniform_attr_loader.cpp
src/ecs/: child_entities.cpp  component.cpp  entity.cpp  logic.cpp  logic_component.cpp  mesh_component.cpp  shader_component.cpp  texture_component.cpp  transform_component.cpp
src/glad/: glad.cpp
src/gs/: camera.cpp  context.cpp  context_properties.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
src/rendering/: properties.cpp  render_pass.cpp  render_pass_manager.cpp  renderer.cpp  shader_stack.cpp  texture_unit_stack.cpp
src/res/: creation.cpp  framebuffer.cpp  mesh.cpp  resource.cpp  resource_manager.cpp  shader_program.cpp  texture.cpp
src/scene/: glsl_sandbox_logic.cpp  light_matrix_logic.cpp  projection.cpp  rotate_logic.cpp  scene.cpp  scene_manager.cpp  view.cpp
src/system/: file_change_monitoring.cpp  log.cpp
(+77 files in other folders)
